# rmat

./: Cargo.toml  README.md
src/: lib.rs  macros.rs  main.rs  test.rs
src/matrix_module/: mod.rs  utils.rs
src/rmat/: mod.rs  utils.rs
