[package]
name = "rmat"
version = "0.1.0"
edition = "2021"
authors = ["Christian Valdivia Torres <c.valdivia.torres@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Rust library minimal implementation of two-dimensional matrix algebra"
readme = "README.md"
repository = "https://github.com/chris-vt/rmat"
keywords = ["matrices", "algebra"]
categories = ["data-structures"]

[dependencies]
rand = "0.8.5"